--- a/PlanetaryBilliard/pom.xml
+++ b/PlanetaryBilliard/pom.xml
@@ -40,12 +40,10 @@
                     <targetClasses>
                         <param>planetary.physics.*</param>
                         <param>planetary.spaceobject.*</param>
-                        <param>planetary.core.*</param>
                     </targetClasses>
                     <targetTests>
                         <param>planetary.physicstests.*</param>
                         <param>planetary.spaceobjecttests.*</param>
-                        <param>planetary.coretests.*</param>
                     </targetTests>
                 </configuration>
             </plugin>
@@ -63,6 +61,34 @@
                 <artifactId>maven-jxr-plugin</artifactId>
                 <version>2.5</version>
               </plugin>
+              
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
+            </plugin> 
+        
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.4.3</version>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>shade</goal>
+                    </goals>
+                    <configuration>
+                        <transformers>
+                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <mainClass>planetary.core.PlanetaryBilliard.java</mainClass>
+                                <!-- mainClass on muotoa "fi.omanimi.superprojekti.Main" -->
+                            </transformer>
+                        </transformers>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
         
         </plugins>    
     </build>
