--- a/PlanetaryBilliard/pom.xml
+++ b/PlanetaryBilliard/pom.xml
@@ -81,8 +81,7 @@
                     <configuration>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                <mainClass>planetary.core.PlanetaryBilliard.java</mainClass>
-                                <!-- mainClass on muotoa "fi.omanimi.superprojekti.Main" -->
+                                <mainClass>fi.ilmo.planetary.core.PlanetaryBilliard.java</mainClass>
                             </transformer>
                         </transformers>
                     </configuration>
